--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
                     <li><a href="#hobbies">HOBBIES</a></li>
                     <li><a href="#">PROJECTS</a></li>
                     <li><a href="#contact">CONTACT</a></li>
-                </ul>
+                </ul><p>nothing</p>
                 <div class="menu-btn">
                     <i class="fas fa-bars"></i>
                 </div>
