--- a/index.html
+++ b/index.html
@@ -227,7 +227,7 @@
         </div>
         <h4>This is not fully designed website. The editing is going on daily and I will try my best to bring it in best form.</h4>
         <div class="footer-bottom">
-            &copy; Designed by Bipul Panthi : sakkigoni
+            The site is based on a youtube video: https://www.youtube.com/watch?v=tcskp-ncN0I&t=2585s &copy; Designed by Bipul Panthi : sakkigoni
         </div>
     </div>
     <!---Javascript for the toggle menu in small devices-->
