--- a/index.html
+++ b/index.html
@@ -207,11 +207,11 @@
             <h2 class="title">Get connected</h2>
             <p></p>
             <div class="medias">
-                <a href="https://www.linkedin.com/in/bipul-panthi-102453208/"><img src="images/linkedin.png"></a>
-                <a href="https://github.com/sakkigoni"><img src="images/github.png"></a>
-                <a href="https://www.facebook.com/deshbhaktabipul/"><img src="images/fb.png"></a>
-                <a href="https://www.instagram.com/sakkigoni_._/"><img src="images/insta.png"></a>
-                <a href="mailto:panthibipul@gmail.com"><img src="images/gmail.png"></a>
+                <a href="https://www.linkedin.com/in/bipul-panthi-102453208/" target="_blank"><img src="images/linkedin.png"></a>
+                <a href="https://github.com/sakkigoni" target="_blank"><img src="images/github.png"></a>
+                <a href="https://www.facebook.com/deshbhaktabipul/" target="_blank"><img src="images/fb.png"></a>
+                <a href="https://www.instagram.com/sakkigoni_._/" target="_blank"><img src="images/insta.png"></a>
+                <a href="mailto:panthibipul@gmail.com" target="_blank"><img src="images/gmail.png"></a>
             </div>
 
         </div>
