--- a/index.html
+++ b/index.html
@@ -211,6 +211,7 @@
                 <a href="https://github.com/sakkigoni" target="_blank"><img src="images/github.png"></a>
                 <a href="https://www.facebook.com/deshbhaktabipul/" target="_blank"><img src="images/fb.png"></a>
                 <a href="https://www.instagram.com/sakkigoni_._/" target="_blank"><img src="images/insta.png"></a>
+                <a href="https://www.youtube.com/channel/UCYu-cFIT2ocx_Ik32DER7lg" target="_blank"><img src="images/yt.png"></a>
                 <a href="mailto:panthibipul@gmail.com" target="_blank"><img src="images/gmail.png"></a>
             </div>
 
