--- a/index.html
+++ b/index.html
@@ -144,13 +144,13 @@
         <div class="class max-width">
             <h2 class="title">Experiences</h2>
             <div class="work-content">
-                <h1>1. Part Time Translator <a href="https://www.terilogy.com"><span>Terilogy Services</span></a></h1>
+                <h1>1. Part Time Translator <a href="https://www.terilogy.com" target="_blank"><span>Terilogy Services</span></a></h1>
                 <h2>(Jan 2021 - July 2021)</h2>
                 <p>Experience working as a part time interpreter in this company. Interpretation in between Japanese-English-Nepali languages. </p>
 
             </div>
             <div class="work-content">
-                <h1>2. Part Time C/C++ Engineer <a href="https://enaspiration.com"><span>Enaspiration Inc.</span></a></h1>
+                <h1>2. Part Time C/C++ Engineer <a href="https://enaspiration.com" target="_blank"><span>Enaspiration Inc.</span></a></h1>
                 <h2>(July 2021 - present)</h2>
                 <p>Experience working as a part time developer with the micro controllers such as Arduino, STMicroelectronics and ESP-32 for the smart lock company. Experiences of developing and editing the firmware required for card detection door unlock
                     systems. Besides these, I also worked on html and css for the browser controls of the smart lock devices.
@@ -158,7 +158,7 @@
 
             </div>
             <div class="work-content">
-                <h1>3. Volunteer e-Sports Team Manager / Head of Operations <a href="https://trainedtokill.com"><span>T2K Esports</span></a></h1>
+                <h1>3. Volunteer e-Sports Team Manager / Head of Operations <a href="https://trainedtokill.com" target="_blank"><span>T2K Esports</span></a></h1>
                 <h2>(February 2020 - present)</h2>
                 <p>Experiences working as an e-sports team manager and head of operations. Managing the sponsors, team performances, team rosters, handling the social media etc. are my major responsibilities.
                 </p>
