--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html>
+
 <head>
     <meta name="viewport" content="with=device-width" ,initial-scale=1.0>
     <title>Bipul Panthi Port Folio</title>
@@ -59,7 +60,7 @@
                 <div class="column right">
                     <div class="text">I'm Bipul and I'm a <span>student</span></div>
                     <p>Hello! It's me Bipul Panthi, an enthusiastic and credentialed MEXT scholar interested in robotics, software development and web-app development. I am currently studying mechanical engineering in Tokyo Institute of Technology. </p>
-                    <a href="#">Download CV</a>
+                    <a href="download/Bipul_Panthi_CV1.pdf">Download CV</a>
 
                 </div>
 
