--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
                 <div class="column right">
                     <div class="text">I'm Bipul and I'm a <span>student</span></div>
                     <p>Hello! It's me Bipul Panthi, an enthusiastic and credentialed MEXT scholar interested in robotics, software development and web-app development. I am currently studying mechanical engineering in Tokyo Institute of Technology. </p>
-                    <a href="download/Bipul_Panthi_CV1.pdf">Download CV</a>
+                    <a href="download/Bipul_Panthi_CV1.pdf" target="_blank">Download CV</a>
 
                 </div>
 
