--- a/indexjp.html
+++ b/indexjp.html
@@ -13,7 +13,6 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css" />
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/OwlCarousel2/2.3.4/assets/owl.carousel.min.css" />
     <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/typed.js/2.0.12/typed.min.js"></script>
 </head>
 
 <body>
@@ -24,13 +23,13 @@
             </div>
             <div class="menu">
                 <ul>
-                    <li><a href="">HOME</a></li>
-                    <li><a href="#about">ABOUT ME</a></li>
-                    <li><a href="#skills">SKILLS</a></li>
-                    <li><a href="#work">EXPERIENCES</a></li>
-                    <li><a href="#hobbies">HOBBIES</a></li>
-                    <li><a href="#">PROJECTS</a></li>
-                    <li><a href="#contact">CONTACT</a></li>
+                    <li><a href="">ホーム</a></li>
+                    <li><a href="#about">紹介</a></li>
+                    <li><a href="#skills">スキール</a></li>
+                    <li><a href="#work">経験</a></li>
+                    <li><a href="#hobbies">趣味</a></li>
+                    <li><a href="#">プロジェクト</a></li>
+                    <li><a href="#contact">連絡</a></li>
                 </ul>
                 <div class="menu-btn">
                     <i class="fas fa-bars"></i>
@@ -42,10 +41,10 @@
     <section class="home" id="home">
         <div class="max-width">
             <div class="home-content">
-                <div class="text-1">Hello!! My name is</div>
-                <div class="text-2">BIPUL PANTHI</div>
-                <div class="text-3">And I'm <span class="typing"></span></div>
-                <a href="#contact">Hire me!!!</a>
+                <div class="text-1">こんにちは!! 私は</div>
+                <div class="text-2">ビプル　です</div>
+                <div class="text-3">And I'm a <span>Learner</span></div>
+                <a href="#contact">雇用する</a>
 
             </div>
         </div>
@@ -53,13 +52,13 @@
     <!-- about section starts below -->
     <section class="about" id="about">
         <div class="max-width">
-            <h2 class="title">About Me</h2>
+            <h2 class="title">紹介</h2>
             <div class="about-content">
                 <div class="column left">
                     <img src="images/drum.jpg" alt="">
                 </div>
                 <div class="column right">
-                    <div class="text">I'm Bipul and I'm <span class="typing1"></span></div>
+                    <div class="text">I'm Bipul and I'm a <span>student</span></div>
                     <p>Hello! It's me Bipul Panthi, an enthusiastic and credentialed MEXT scholar interested in robotics, software development and web-app development. I am currently studying mechanical engineering in Tokyo Institute of Technology. </p>
                     <a href="download/Bipul_Panthi_CV1.pdf" target="_blank">Download CV</a>
 
@@ -74,7 +73,7 @@
     <!-- Skills section starts from here -->
     <section class="skills" id="skills">
         <div class="max-width">
-            <h2 class="title">My Skills</h2>
+            <h2 class="title">私のスキール</h2>
             <div class="skills-content">
                 <div class="column left">
                     <img src="images/skills.jpg">
@@ -141,24 +140,24 @@
     <!-- work experiences till date -->
     <section class="work" id="work">
         <div class="class max-width">
-            <h2 class="title">Experiences</h2>
+            <h2 class="title">経験</h2>
             <div class="work-content">
-                <h1>1. Part Time Translator <a href="https://www.terilogy.com" target="_blank"><span>Terilogy Services</span></a></h1>
-                <h2>(Jan 2021 - July 2021)</h2>
+                <h1>1. 通訳のアルバイト <a href="https://www.terilogy.com" target="_blank"><span>Terilogy Services</span></a></h1>
+                <h2>(2021年1月 - 2021年7月)</h2>
                 <p>Experience working as a part time interpreter in this company. Interpretation in between Japanese-English-Nepali languages. </p>
 
             </div>
             <div class="work-content">
-                <h1>2. Part Time C/C++ Engineer <a href="https://enaspiration.com" target="_blank"><span>Enaspiration Inc.</span></a></h1>
-                <h2>(July 2021 - present)</h2>
+                <h1>2. C/C++ エンジニアアルバイト <a href="https://enaspiration.com" target="_blank"><span>Enaspiration Inc.</span></a></h1>
+                <h2>(2021年7月 - 現在)</h2>
                 <p>Experience working as a part time developer with the micro controllers such as Arduino, STMicroelectronics and ESP-32 for the smart lock company. Experiences of developing and editing the firmware required for card detection door unlock
                     systems. Besides these, I also worked on html and css for the browser controls of the smart lock devices.
                 </p>
 
             </div>
             <div class="work-content">
-                <h1>3. Volunteer e-Sports Team Manager / Head of Operations <a href="https://trainedtokill.com" target="_blank"><span>T2K Esports</span></a></h1>
-                <h2>(February 2020 - present)</h2>
+                <h1>3. ボランティア e-スポーツチームマネジャー / Head of Operations <a href="https://trainedtokill.com" target="_blank"><span>T2K Esports</span></a></h1>
+                <h2>(2020年2月 - 現在)</h2>
                 <p>Experiences working as an e-sports team manager and head of operations. Managing the sponsors, team performances, team rosters, handling the social media etc. are my major responsibilities.
                 </p>
 
@@ -171,26 +170,26 @@
     <!-- hobbies section starts here -->
     <section class="hobbies" id="hobbies">
         <div class="max-width">
-            <h2 class="title">My Hobbies</h2>
+            <h2 class="title">私の趣味</h2>
             <div class="hobbies-content">
                 <div class="column left">
                     <img src="images/hobbies.jpg" alt="">
                 </div>
                 <div class="column right">
                     <div class="btn">
-                        <div class="hero-btn">Listening to music</div>
+                        <div class="hero-btn">音楽を聞いたり弾いたり</div>
                     </div>
                     <div class="btn">
-                        <div class="hero-btn">Playing Drums</div>
+                        <div class="hero-btn">ドラムをする</div>
                     </div>
                     <div class="btn">
-                        <div class="hero-btn">Cycling</div>
+                        <div class="hero-btn">サイクリング</div>
                     </div>
                     <div class="btn">
-                        <div class="hero-btn">Playing Games</div>
+                        <div class="hero-btn">ゲームをする</div>
                     </div>
                     <div class="btn">
-                        <div class="hero-btn">Live Streaming in YouTube</div>
+                        <div class="hero-btn">YouTubeで配信する</div>
                     </div>
 
 
@@ -203,7 +202,7 @@
     <!-- contact me section begins here -->
     <section class="contact" id="contact">
         <div class="max-width">
-            <h2 class="title">Get connected</h2>
+            <h2 class="title">連絡</h2>
             <p></p>
             <div class="medias">
                 <a href="https://www.linkedin.com/in/bipul-panthi-102453208/" target="_blank"><img src="images/linkedin.png"></a>
